# dio-desafio-github

./: .replit  Projeto _Transfer_Learning_Python.ipynb  README.md  pyproject.toml
FormacaoMachineLearningSpecialist/: dados.py  main.py
Formação Angular/: CardComponent.js  inde.html  index.html  style.css
HtmlFlexBox/: flex-justify.html  flex-wrap.html  flexcontainer.html  flexdirection.html
IntroducaoHtmlCss/: index.html
ReactJS/dio_react_inicial/: package-lock.json  package.json
ReactJS/dio_react_inicial/public/: index.html
ReactJS/dio_react_inicial/src/: index.js  style.css
RecriarPagInicialInstagram/: index.html  style.css
